Type description edit align fixed

--- a/frontend/src/components/Types/CurrentType/CurrentType.css
+++ b/frontend/src/components/Types/CurrentType/CurrentType.css
@@ -73,7 +73,7 @@ td {
 }
 
 .typeCurInput {
-    text-align: center;
+    text-align: left;
     width: 90%;
     background-color: whitesmoke;
     border: 0;
